2001-12-06  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* tests/confsub.test, tests/depdist.test, tests/extra5.test,
	tests/nobase.test, tests/stamph2.test,
	tests/subdirbuiltsources.test: Require Autoconf.

2001-12-05  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* automake.texi (Dist): Document $(DISTCHECK_CONFIGURE_FLAGS).
	* lib/am/distdir.am (distcheck): Honnor $(DISTCHECK_CONFIGURE_FLAGS).
	Suggested by Merijn de Jonge.

2001-12-05  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* lib/am/tags.am (ID): Search $(LISP) files in $(srcdir),
	like other ID dependencies.
	Suggested by Christian Cornelssen.

2001-12-05  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* automake.in (handle_dist): Distribute common files which
	do not exist but are target of a Makefile rule.
	* automake.texi (Dist): Update.
	* test/builtcommon3.test: New file.
	* test/Makefile.am (TESTS): Add distcommon3.test.

2001-12-04  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* automake.in (macro_define): Fix misuse of chomp introduced on
	2001-11-28.

2001-11-28  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* automake.in (append_comments): New.  Extracted from
	read_am_file.  Match '\n' with a regexp, don't use substr (the
	perlport man page says '\n' is not always one byte wide).
	(read_am_file):  Use it.  Always chomp $_.
	(file_contents_internal):  Use append_comments.
	(macro_define): Don't treat the trailing '\n' with substr, use
	a regexp or chomp.

2001-11-28  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* tests/defs: Turn on shell traces when VERBOSE=x.

2001-11-26  Tom Tromey  <tromey@redhat.com>

	* automake.texi (Assembly Support): Mention .s and .S as only
	suffixes.

2001-11-26  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* tests/subdirbuiltsources.test: Set -e after sourcing defs, not
	before.

2001-11-26  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* tests/lex3.test: Require GNU Make.

2001-11-26  Alexandre Duret-Lutz  <duret_g@epita.fr>
