@@ -1,3 +1,15 @@
+2001-12-12  Alexandre Duret-Lutz  <duret_g@epita.fr>
+
+	* m4/python.m4 (AM_PATH_PYTHON): Check all known Python interpreters
+	in loop until we find one the satisfies the user supplied version.
+	Add python2 to the list of known interpreters.  Don't use
+	changequote.  Cache the calculation of PYTHON_VERSION and
+	PYTHON_PLATFORM.
+	(AM_PYTHON_CHECK_VERSION): New function, extracted from
+	AM_PATH_PYTHON and modernized.
+	* m4/runlog.m4: New file.
+	* m4/Makefile.am (m4data_DATA): Add it.
+
 2001-12-06  Alexandre Duret-Lutz  <duret_g@epita.fr>
 
 	* tests/confsub.test, tests/depdist.test, tests/extra5.test,
